# agentforge

./: .coverage  .gitignore  CONTEXT.md  NEXT_STEPS.md  PRD_v2.md  QUICKSTART.md  README.md  execute.py  mutation_testing.toml  pyproject.toml  run_contract.py  run_contract_commands.py
.agentforge/: baseline.json  codebase_profile.yaml  conformance_report.yaml  generation.yaml  generation_prompt.txt  repo.yaml  results.md  results.sarif
.agentforge/backups/: 20251231_052517_436324_tests_unit_harness_test_tool_domain.py  20251231_052517_438544_tests_unit_harness_test_tool_registry.py  20251231_053401_363505_tests_unit_harness_test_monitor_domain.py  20251231_053532_668892_tools_harness_monitor_domain.py
.agentforge/bridge/: generation_report.yaml
.agentforge/cache/: cli-exception-handling_full.json  cli-has-version_full.json  cli-tests-use-runner_full.json  command-groups-organized_full.json  contract-has-name_full.json  main-guard-pattern_full.json  no-assert-true-false_full.json  no-bare-except_full.json  no-bare-exceptions-cli_full.json  no-breakpoint_full.json  no-cast-without-reason_full.json  no-env-files-committed_full.json  no-env-files_full.json  no-eval_full.json  no-exec_full.json  no-hardcoded-api-keys_full.json  no-hardcoded-passwords_full.json  no-hardcoded-paths_full.json  no-jwt-without-verify_full.json  no-md5-for-security_full.json  no-pdb-import_full.json  no-pickle-load_full.json  no-private-keys_full.json  no-raw-sql-execute_full.json  no-secrets-in-code_full.json  no-sha1-for-security_full.json  no-shell-true_full.json  no-sql-string-format_full.json  no-ssl-verify-false_full.json  no-star-imports_full.json  no-weak-random_full.json  no-yaml-unsafe-load_full.json  options-have-help_full.json  path-inputs-validated_full.json  prefer-pytest-raises_full.json  prefer-typing-extensions_full.json  pytest-pass_full.json  require-builtin-contracts_full.json  require-conftest_full.json  require-readme_full.json  (+6 more)
.agentforge/exemptions/: max-cyclomatic-complexity-verification-checks.yaml  test-fixtures-requests.yaml  test-fixtures-sqlite3.yaml
.agentforge/fix_attempts/: V-04b31cde217a_20251231_111033.yaml  V-04b31cde217a_20251231_111312.yaml  V-04b31cde217a_20251231_112459.yaml  V-04b31cde217a_20251231_113032.yaml
.agentforge/history/: 2025-12-30.yaml  2025-12-31.yaml
.agentforge/specs/: bridge-mappings-v1.yaml  bridge-v1.yaml  cicd-outputs-v1.yaml  cicd-platforms-v1.yaml  cicd-v1.yaml  cli-v1.yaml  (+35 more)
agentforge/: workspace.yaml
cli/: core.py  helpers.py  main.py  parser.py  render.py
config/: README.md  architecture.yaml  context_retrieval.yaml  correctness.yaml  execution.yaml  harness_tools.yaml
contracts/: README.md  agentforge.contract.yaml  generated.contract.yaml  spec.adapt.v1.yaml  spec.analyze.v1.yaml  spec.clarify.v1.yaml  spec.draft.v1.yaml  spec.intake.v1.yaml  spec.refactor.intake.v1.yaml  spec.revise.decide.v1.yaml  spec.revise.v1.yaml  spec.validate.v1.yaml  tdflow.green.v1.yaml  tdflow.red.v1.yaml  tdflow.refactor.v1.yaml
sample_data/: project_context.yaml
schemas/: README.md  analysis_report.schema.yaml  architecture.schema.yaml  assembled_prompt.schema.yaml  clarification_log.schema.yaml  codebase_profile.schema.yaml  conformance_report.schema.yaml  context_retrieval.schema.yaml  contract.schema.yaml  execution.schema.yaml  exemption.schema.yaml  global-config.schema.yaml  history_snapshot.schema.yaml  intake_record.schema.yaml  prompt-contract.schema.yaml  refactor_intake_record.schema.yaml  repo.schema.yaml  revision_session.schema.yaml  specification.schema.yaml  validation_report.schema.yaml  violation.schema.yaml  workspace.schema.yaml
setup/: install.sh  yaml-only.md
tests/: conftest.py  test_escalation_domain.py  test_python_checks.py
tools/: __init__.py  analyze_structure.py  builtin_checks.py  builtin_checks_architecture.py  builtin_checks_architecture_helpers.py  command_runner.py  context_assembler.py  context_assembler_types.py  context_retrieval.py  context_retrieval_cli.py  contract_validator.py  contract_validator_types.py  contracts.py  contracts_ast.py  contracts_execution.py  contracts_lsp.py  contracts_registry.py  contracts_types.py  embedding_providers.py  lsp_adapter.py  lsp_adapters.py  lsp_client.py  lsp_types.py  output_validator.py  pyright_runner.py  run_mutation_tests.py  vector_search.py  vector_types.py  verification_ast.py  verification_checks.py  verification_contracts_check.py  verification_reports.py  verification_runner.py  verification_types.py  workspace.py  workspace_config.py  workspace_types.py
workflows/: spec_workflow.yaml
(+3470 files in other folders)
